--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -58,3 +58,16 @@
     justify-content: space-between;
     margin: 20px 80px 25px 50px;
 }
+
+.logoSearch {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border-bottom: 1px solid black;
+}
+
+.logoSearch input {
+    margin-left: 5px;
+    width: 250px;
+}
