--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,13 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#container {
+    min-height: 100%;
+    position: relative;
+}
 .header {
     display: flex;
     align-items: center;
@@ -50,6 +60,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 60px;
     border-top: 1px solid black;
 }
 
@@ -70,4 +81,9 @@
 .logoSearch input {
     margin-left: 5px;
     width: 250px;
+}
+
+#body {
+    padding: 10px;
+    padding-bottom: 60px;
 }
