--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,10 +5,12 @@ html, body {
 }
 
 #container {
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
 }
 .header {
+    background-color: whitesmoke;
+    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,8 +18,10 @@ html, body {
 }
 
 .header div {
-    margin: 10px 80px 15px 50px;
+    margin: 10px 50px 15px 50px;
 }
+
+
 
 .header a {
     text-decoration: none;
@@ -56,6 +60,7 @@ html, body {
 }
 
 .footer {
+    background-color: whitesmoke;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -67,14 +72,27 @@ html, body {
 .footer div {
     display: flex;
     justify-content: space-between;
-    margin: 20px 80px 25px 50px;
+    height: 3vh;
+}
+
+.footer div img {
+    padding-top: 5px;
+    padding-left: 5px;
+}
+
+.footer div span {
+    padding-right: 10px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
 }
 
 .logoSearch {
+    background-color: whitesmoke;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     border-bottom: 1px solid black;
 }
 
@@ -82,8 +100,15 @@ html, body {
     margin-left: 5px;
     width: 250px;
 }
+s
+.logoSearch img {
+    padding: 5px;
+}
 
-#body {
-    padding: 10px;
-    padding-bottom: 60px;
+#body{
+    padding-bottom: 3vh;
+    min-height: 82vh;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
 }
