Added images at home page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -21,8 +21,6 @@ html, body {
     margin: 10px 50px 15px 50px;
 }
 
-
-
 .header a {
     text-decoration: none;
     font-size: 20px;
@@ -111,4 +109,9 @@ s
     overflow: hidden;
     position: relative;
     width: 100%;
+}
+
+.customImage {
+    width: 250px;
+    height: 250px;
 }
