--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,22 +1,11 @@
-#containerSidebar {
-  display: grid;
-  grid-template-columns: 210px 1fr;
-  height: 100%;
-  width: 100%;
-}
-
 #sidebar {
-  grid-column-start: 1;
   background-color: whitesmoke;
   border-right: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 #sidebar h3 {
   text-align: center;
-}
-
-#body {
-  grid-column-start: 2;
 }
 
 .category {
