--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -44,3 +44,7 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 }
+
+.nav-pills .nav-link:hover {
+  background-color: #007bff;
+}
