--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,9 +1,5 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .searchbar {
-    display: none;
-  }
-
   #homeText {
     display: none;
   }
@@ -13,12 +9,12 @@
   #newsText {
     display: none;
   }
+  #loginButton {
+    display: none;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .searchbar {
-    display: none;
-  }
   #homeIcon {
     display: none;
   }
@@ -32,9 +28,7 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  .searchbar {
-    display: block;
-  }
+
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
