--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,11 +31,16 @@
   #featuredProduct .customImage{
     max-height: 300px;
   }
+
+  .verticalCard {
+    display: grid;
+    grid-template-columns: 0.4fr 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
