Fix responsiveness featured Horizontal

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,18 @@
   #sidebar {
     margin: 0px 10px 10px;
   }
+
+  #card6  {
+    display: none;
+  }
+
+  #card7 {
+    display: none;
+  }
+
+  #featuredHorizontalGrid {
+    grid-template-columns: 0.5fr 0.5fr;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -36,6 +48,10 @@
     display: grid;
     grid-template-columns: 0.4fr 1fr;
     grid-template-rows: 1fr;
+  }
+
+  #featuredHorizontalGrid {
+    grid-template-columns: 0.25fr 0.25fr 0.25fr 0.25fr;
   }
 }
 
