--- a/src/styles/news.css
+++ b/src/styles/news.css
@@ -11,10 +11,23 @@
     }
   }
   /* Small devices (portrait tablets and large phones, 600px and up) */
-  @media only screen and (min-width: 600px) {
-    .newsItem {
-        display: flex;
-        justify-content: space-between;
+@media only screen and (min-width: 600px) {
+.newsItem {
+    display: flex;
+    justify-content: space-between;
     }
-  }
-  
+}
+
+@media only screen and (max-width: 1200px) {
+    #article-content {
+      display: flex; 
+      flex-direction: column-reverse;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    #article-content {
+    display: grid; 
+    grid-template-columns: 1fr 0.4fr;
+    }
+}
